# storagy-repo-1

./: .gitignore  Fod_distance.py  README.md  align_rgb_to_depth.py  depth_cam.py  detect.py  detect_test.py  et --hard d8aba9eb  face_detect.py  face_detect_test.py  face_save.py  facenet.py  facenet_test.py  main.py  rgb_cam.py  tools_detect.py  tools_detect_test.py  train.py  로직
FOD.v6i.yolov8/: data.yaml
FOD.v6i.yolov8/test/labels/: 000045_jpg.rf.a166f44c2dd6339e852cfda3cfe43d6b.txt  000091_jpg.rf.098847ef4fe844d4e494148c437f1799.txt  000119_jpg.rf.11d8bbba945635dd0852651755fa5f84.txt  000144_jpg.rf.2a14d71ddac561c8c06e3e85f5e97330.txt  000145_jpg.rf.4b4308ca17c50d6ec1d5ee17e20c8265.txt  000204_jpg.rf.063bf016311c0869b2d59927e9f8095a.txt  000255_jpg.rf.68131e04b66b0d0be2d886ee25b9b253.txt  000298_jpg.rf.276d98fc15d1f19076e85e781d453935.txt  000341_jpg.rf.9aabe3c2a211a5753fb999f907455e68.txt  000361_jpg.rf.d4b74aa74beac71df9fb1116f5dcc08d.txt  000369_jpg.rf.79c9ea0102c4ade819a4ceb6376e9ef6.txt  000390_jpg.rf.10f0f9966f09a023bc8b54831228acca.txt  000398_jpg.rf.7a180f9a2d3abb1daa0577d4a859f248.txt  000436_jpg.rf.b271ecd90f12da5282317d3cd105cd7a.txt  000472_jpg.rf.99b3c64e5810de6a28dc80df9d563f9e.txt  000536_jpg.rf.88a0816d3de6cb7be474282810932b13.txt  000564_jpg.rf.efc8aec2e1697fab6cc95115e2076ca4.txt  000579_jpg.rf.dac6120c663c3be33db3a3fdc5142710.txt  000602_jpg.rf.a2b85c751f4570966ea1811e90af3647.txt  000702_jpg.rf.08609d3dbba5afd5675c9275abe1065b.txt  000712_jpg.rf.5852125eea6cb92e25d09c38fc356fef.txt  000717_jpg.rf.246dbaeac93b0535a08c7ffef2a8a73d.txt  000749_jpg.rf.5da06a89d518f6f2ffa7041633fc9adb.txt  000872_jpg.rf.32e52f5d6f6d3285e3a9df7682e3104d.txt  (+227 more)
circle/: cam_flask.py  room_10.pgm  room_10.yaml  room_11.yaml  room_8.pgm  room_8.yaml  room_x.yaml
circle/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
circle/log/: latest_build
circle/src/package_msg/: CMakeLists.txt  package.xml
circle/src/package_msg/action/: ActionMessages.action
circle/src/xarm/: package.xml  setup.cfg  setup.py
circle/src/xarm/xarm/: xarm_control.py
circle/src/xarm_control_pkg/: package.xml  setup.cfg  setup.py
circle/templates/: index.html
cv/: face_save.py  main.py  tools_detect_test.py
cv/db/: log.json  tools.json
dataset/FOD.v6i.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
dataset/FODver2.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
db/: README.md
flask_db/: app.db
flask_db/app/: __init__.py  models.py
img_src/: face_metadata.json
project/: app.db  config.py  run.py
project/app/: __init__.py  filter.py  models.py
project/cv/: db_for_cv.py  face_detect.py  face_save.py  main.py  tool_status.json  tools_detect.py  tools_detect_test.py  로직
(+12467 files in other folders)
