<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>package_msg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bskim8823@gmail.com">addinedu</maintainer>
  <license>TODO: License declaration</license>

  <!-- ROS2 action -->
  <depend>action_msgs</depend>
  <depend>rosidl_default_generators</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 메시지 패키지 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
