<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xarm</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bskim8823@gmail.com">addinedu</maintainer>
  <license>TODO: License declaration</license>

  <!--ROS2 Action-->
  <depend>rclpy</depend>
  <depend>rclpy_action</depend>
  <depend>action_msgs</depend>
  <depend>package_msg</depend>  <!-- ✅ 액션 메시지 패키지 추가 -->
  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
